Bug Fix
Pictures and searchbar no longer overlap with navbar.

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -191,7 +191,9 @@
 .inactive {
     display: none;
 }
-
+.mainNavigation{
+    z-index: 10;
+}
 .navbar-toggle {
   position: fixed;
   top: 0;
